@@ -13,8 +13,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Slice;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -24,6 +22,7 @@ import org.springframework.web.bind.annotation.*;
 import java.beans.PropertyEditorSupport;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @RestController
@@ -111,6 +110,7 @@ public class PlaceRestController {
     }
 
     //    들어오는 districtFilter 파라미터를 커스텀 바인딩
+    @Deprecated(since = "240427", forRemoval = true)
     @InitBinder
     public void initBinder(WebDataBinder binder) {
         binder.registerCustomEditor(AreaFilter.class, new PropertyEditorSupport() {
@@ -118,7 +118,7 @@ public class PlaceRestController {
             public void setAsText(String text) throws IllegalArgumentException {
                 try {
                     ObjectMapper mapper = new ObjectMapper();
-                    setValue(mapper.readValue(URLDecoder.decode(text, "UTF-8"), AreaFilter.class));
+                    setValue(mapper.readValue(URLDecoder.decode(text, StandardCharsets.UTF_8), AreaFilter.class));
                 } catch (IOException e) {
                     throw new RuntimeException(e);
                 }
